# notion

./: .flake8  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  deploy.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
notion_automation/: __init__.py  __main__.py  asyncio.py  email_utils.py  http_async.py  imap_async.py  logging_utils.py  s3_utils.py  types.py  watch_email.py  watch_notion.py
notion_automation/notion_utils/: __init__.py  api.py  blocks.py  config.py  contacts.py  deploy.py  email.py  html.py  properties.py  replies.py  support_case.py
notion_automation/templates/: email_styles.css  email_wrapper.html
tests/: __init__.py  fixtures.py  test_auto_archive.py  test_blocks_code_and_table.py  test_blocks_divider_and_image.py  test_blocks_formatting.py  test_blocks_links_and_fenced_code.py  test_blocks_roundtrip_annotations.py  test_blocks_roundtrip_color.py  test_blocks_roundtrip_idempotent.py  test_blocks_to_html.py  test_blocks_trim_empty_edges.py  test_email_dedupe.py  test_forwarded_email_headers.py  test_gmail_extended_fetch.py  test_html_callout_icon_absence.py  test_html_to_blocks.py  test_inline_cid_image.py  test_link_idempotency.py  test_notion_deploy.py  test_notion_deploy_create.py  test_notion_deploy_root_parent.py  test_support_case_title_message_id_overlap.py  test_toggle_blocks.py  test_tracking_email_resolved.py  test_utf8_subject.py  test_watch_email.py
tests/data/: format-blocks.json
