[project]
name = "notion-automation"
version = "0.1.0"
description = "Automation tools integrating Notion with email and AWS S3"
authors = [
    {name = "Mathias Iversen",email = "mathiasboetcheriversen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["notion", "automation", "email", "s3", "async", "integration"]
classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        "License :: OSI Approved :: MIT License",
        "Intended Audience :: Developers",
        "Topic :: Internet",
        "Topic :: Office/Business",
        "Framework :: AsyncIO"
]
license = { file = "LICENSE" }

dependencies = [
    "boto3 (>=1.34.0,<2.0.0)",
    "aiohttp (>=3.9.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[project.urls]
Homepage = "https://github.com/morbitech1/notion-automation"
Repository = "https://github.com/morbitech1/notion-automation"
Issues = "https://github.com/morbitech1/notion-automation/issues"

[project.scripts]
watch-email = "notion_automation.watch_email:main"
watch-notion = "notion_automation.watch_notion:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.17"
pytest-asyncio = "^0.23.0"
pytest = "^8.3.2"
flake8 = "^7.1.1"
mypy = "^1.11.2"
types-requests = ">=2.32.4.20250913,<3.0.0.0"
flake8-bugbear = "^24.12.12"

[tool.mypy]
files = ["notion_automation", "deploy.py"]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = false
show_error_codes = true
pretty = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 120
exclude = [".venv", ".git", "__pycache__", "tests"]

